polybot-k8s/polybot-dev/polybot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: polybot-dev
  name: polybot-dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot-dev
  template:
    metadata:
      labels:
        app: polybot-dev
    spec:
      containers:
      - env:
        - name: TELEGRAM_BOT_TOKEN
          valueFrom:
            secretKeyRef:
              key: TELEGRAM_TOKEN
              name: my-secrets-dev
        - name: S3_BUCKET_NAME
          valueFrom:
            secretKeyRef:
              key: BUCKET_ID
              name: my-secrets-dev
        - name: QUEUE_URL
          valueFrom:
            secretKeyRef:
              key: SQS_URL
              name: my-secrets-dev
        - name: NGINX_URL
          value: https://majd.app.dev.fursa.click
        - name: DYNAMODB_SESSION
          value: majd_dev_prediction_session
        - name: DYNAMODB_OBJECTS
          value: majd_dev_detection_objects
        image: ghcr.io/majdabbas9/polybot_dev_image:226
        name: polybot-container
