polybot-k8s/polybot-dev/polybot_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-polybot-dev-k8s
spec:
  selector:
    app: polybot-dev
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
