polybot-k8s/polybot-dev/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: polybot-dev-service
  namespace: dev
spec:
  selector:
    app: polybot-dev
  ports:
    - port: 8443         # Internal port (what Ingress sees)
      targetPort: 8443   # Your app's container port
